<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Mainmenu">
    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/ic_launcher_background"
        />
    <TextView
    android:id="@+id/titleMainMenu"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="@id/appLogo"
        app:layout_constraintBottom_toTopOf="@id/mainMenuButtons"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    android:text="@string/applabel"
    android:textSize="50dp"
    />
    <LinearLayout
        android:id="@+id/mainMenuButtons"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/titleMainMenu"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/startStudyB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startstudy"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/editStudyB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editstudy"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/calendarStudyB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendar"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>






    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
