<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|top"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/back_create"
        android:textSize="20sp"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questions"
        />

    <EditText
        android:id="@+id/et_simple"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:maxLines="1"
        android:lines="1"
        android:hint="@string/my_hint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/r_ponses"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton android:id="@+id/radio_qcm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="QCM"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton android:id="@+id/radio_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Texte"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton android:id="@+id/radio_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Number"
            android:onClick="onRadioButtonClicked"/>

        <View
            android:id="@+id/divider"
            android:layout_width="300dp"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider" />
    </RadioGroup>

    <ListView
        android:id="@+id/list_reponses"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#EEE"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+"
        android:textSize="20sp"
        android:id="@+id/add"
        android:textColor="@color/white"
        android:layout_marginRight="10dp"
        />

</LinearLayout>
