<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionsActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/question_label_colon"
        android:textSize="30dp"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <com.google.android.material.textfield.TextInputEditText
        android:enabled="false"
        android:layout_width="wrap_content"
        android:minWidth="150dp"
        android:layout_height="wrap_content" />
    <ListView
        android:id="@+id/question_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="200dp" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
            <TextView
                android:id="@+id/slider_current_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero_percent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="50dp"/>
            <TextView
                android:id="@+id/zero_slider_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero_percent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/slider_bar"
                app:layout_constraintBottom_toBottomOf="@id/slider_bar"/>
            <com.google.android.material.slider.Slider
                android:id="@+id/slider_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/slider_current_value"
                android:valueFrom="0"
                android:valueTo="100"
                app:tickVisible="false"
                app:tickColor="@color/black"
                android:stepSize="10"
                app:layout_constraintLeft_toRightOf="@id/zero_slider_label"
                app:layout_constraintRight_toLeftOf="@id/hundred_slider_label"
                android:value="50"/>

            <TextView
                android:id="@+id/hundred_slider_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hundred_percent"
                app:layout_constraintBottom_toBottomOf="@id/slider_bar"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/slider_bar"
                />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_question_button"
        android:textColor="@color/black" />

</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>