<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearBack"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:textSize="50dp"
            android:background="@drawable/back"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50dp"
            android:hint="@string/settings"
            android:orientation="horizontal"
            android:layout_marginTop="40dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:hint="@string/language"
        android:layout_marginTop="125dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/linearLanguage"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:layout_marginTop="200dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/french"
            android:layout_width="120dip"
            android:layout_height="100dip"
            android:background="@drawable/french"
            android:orientation="vertical"
            android:layout_marginLeft="60dp"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/england"
            android:layout_width="120dip"
            android:layout_height="100dip"
            android:background="@drawable/english"
            android:orientation="vertical"
            android:layout_marginLeft="40dp"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearNotif"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:layout_marginTop="300dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgNotif"
            android:layout_width="120dip"
            android:layout_height="100dip"
            android:src="@drawable/notif_on"
            android:orientation="vertical"
            android:layout_marginLeft="60dp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btnNotif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/notif"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="40dp"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearEffect"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:layout_marginTop="400dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgEffect"
            android:layout_width="120dip"
            android:layout_height="100dip"
            android:src="@drawable/sound_on"
            android:orientation="vertical"
            android:layout_marginLeft="60dp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btnEffect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/effect"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="40dp"
            tools:ignore="MissingConstraints" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>